# 15_Document_Image_Translation

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_colab.txt
.github/workflows/: ci.yml
Report and Slides/: Report.tex  Slides.tex
app/: gradio_app.py
configs/: infer.yaml  train.yaml
data/: README.md
deploy/: README_HF_SPACE.md
docs/: DESIGN_BRIEF.md  agent_architecture.md  architecture.md  continual_learning_monitoring.md  data_card.md  data_description.md  deployment.md  ethics_statement.md  layout_fidelity_evaluation.md  model_card.md  model_selection.md  privacy_robustness.md  problem_definition.md  project_plan.md  slide_deck_outline.md
models/: README.md
notebooks/: COLAB_GUIDE.md  ImgTrans_Colab_Training_H100_AUTOPILOT.ipynb  _build_notebook.py
sample_data/: README.md  sample_lines_en.txt
scripts/: smoke.sh
src/imgtrans/: __init__.py  cli.py  config.py  logging_utils.py
src/imgtrans/agent/: __init__.py  imgtrans_agent.py  llm_orchestrator.py  policy.py  state.py  tools.py
src/imgtrans/analysis/: __init__.py  error_analysis.py  latency.py  layout_fidelity.py
src/imgtrans/api/: __init__.py  app_combined.py  dependencies.py  main.py  schemas.py  ui.py
src/imgtrans/automation/: __init__.py  autopilot.py
src/imgtrans/autoreport/: __init__.py  artifact_loader.py  charts.py  report_pdf.py  slides_pptx.py
src/imgtrans/data/: __init__.py  dataset.py  download_dataset.py  samples.py  synth_render.py
src/imgtrans/grading/: __init__.py  checklist.py
src/imgtrans/imaging/: __init__.py  layout.py  preprocess.py  render.py
src/imgtrans/models/: __init__.py  baseline.py  model_registry.py  ocr_engine.py
src/imgtrans/monitoring/: __init__.py  drift_report.py
src/imgtrans/mt/: __init__.py  translator.py
src/imgtrans/training/: __init__.py  evaluate.py  metrics.py  train_baseline.py  train_mt.py  tune.py
tests/: conftest.py  test_agent.py  test_config.py  test_metrics.py  test_ocr_seed.py  test_pipeline_eval.py  test_render.py
